refactor, and update the docs
